// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState should not render illustration when empty 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "center",
      },
      {
        "paddingBottom": 64,
        "paddingLeft": 64,
        "paddingRight": 64,
        "paddingTop": 64,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontSize": 20,
          "lineHeight": 28,
        },
        {
          "color": "#1f2937",
        },
        {
          "fontFamily": "Figtree",
        },
        {
          "fontWeight": "700",
        },
        {
          "marginBottom": 8,
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#4b5563",
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Figtree",
        },
      ]
    }
  >
    Some Message
  </Text>
</View>
`;

exports[`EmptyState should render correctly 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "alignItems": "center",
      },
      {
        "justifyContent": "center",
      },
      {
        "paddingBottom": 64,
        "paddingLeft": 64,
        "paddingRight": 64,
        "paddingTop": 64,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "width": 256,
        },
        {
          "height": 256,
        },
        {
          "display": "flex",
        },
        {
          "alignItems": "center",
        },
        {
          "justifyContent": "center",
        },
        {
          "marginBottom": 32,
        },
      ]
    }
  >
    <View
      testID="actingIllustration"
    />
  </View>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontSize": 20,
          "lineHeight": 28,
        },
        {
          "color": "#1f2937",
        },
        {
          "fontFamily": "Figtree",
        },
        {
          "fontWeight": "700",
        },
        {
          "marginBottom": 8,
        },
      ]
    }
  >
    Title
  </Text>
  <Text
    allowFontScaling={false}
    style={
      [
        {
          "fontSize": 16,
          "lineHeight": 24,
        },
        {
          "color": "#4b5563",
        },
        {
          "textAlign": "center",
        },
        {
          "fontFamily": "Figtree",
        },
      ]
    }
  >
    Some Message
  </Text>
</View>
`;
